fixed logo not showing on certain pages, and other minor adjustments

--- a/css/dining.css
+++ b/css/dining.css
@@ -37,15 +37,15 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
     width: 100%;
     max-width: 86rem;
-    position: relative;
     padding: 0 15px;
     background: var(--clr-pink);
     min-height: 70px;
     z-index: 1;
 }
-#logo {
+.logo {
     position: absolute;
     left: 5.75rem;
     color: var(--clr-white);
@@ -105,8 +105,6 @@ nav ul li ul li {
     width: 100%;
     border: 1px solid rgba(239, 239, 239, 0.3);
 }
-/* GALLERY */
-
 /* MEDIA QUERY'S */
 @media screen and (max-width: 1145px) {
     nav {
